--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -6,7 +6,14 @@
     position: absolute;
     left: 71%;
     top: 50%;
-    transform: translate(-46%, -22%);
+    transform: translate(-38%, -21%);
     width: 44rem;
     height: 17rem;
 }
+.body-containers {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 13rem;
+    background-color: #132450 !important;
+  }
