--- a/src/Components/BodyContainer/styles.css
+++ b/src/Components/BodyContainer/styles.css
@@ -1,9 +1,4 @@
-.body-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 13rem;
-}
+
 .image-container img {
   width: 200px;
   object-fit: cover;
@@ -25,4 +20,10 @@ h1 {
 }
 p {
   font-size: 18px;
+}
+
+h3{
+  font-size:24px;
+  font-weight: bold;
+  color:#132450 !important;
 }
