Comment section and why Should you invest

--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -17,3 +17,8 @@
     gap: 13rem;
     background-color: #132450 !important;
   }
+
+.LearnMore{
+    background-color: white;
+    color: #132450;
+  }
