--- a/src/Components/Body/styles.css
+++ b/src/Components/Body/styles.css
@@ -46,3 +46,23 @@
   .main-body{
     background-color: white;
   }
+  .svg-container-two{
+    position: absolute;
+    left: 71%;
+    top: 10%;
+    transform: translate(-38%, -21%);
+    width: 44rem;
+    height: 17rem;
+  }
+
+   .buttonStyle{
+    background-color: #132450;
+    color: white;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+  }
