--- a/src/Components/BodyContainer/styles.css
+++ b/src/Components/BodyContainer/styles.css
@@ -6,6 +6,8 @@
 }
 .image-container {
   width: 20rem;
+  display: flex;
+  justify-content: center;
 }
 
 .text-container {
@@ -19,7 +21,8 @@ h1 {
   font-size: 40px;
 }
 p {
-  font-size: 18px;
+  font-size: 16px;
+  line-height: 30px !important;
 }
 
 h3{
