--- a/src/Components/BodyContainer/styles.css
+++ b/src/Components/BodyContainer/styles.css
@@ -1,3 +1,13 @@
+.animate-class {
+  opacity: 1;
+  transform: translateY(30px);
+  transition: opacity 1s ease-in-out, transform 0.5s ease;
+}
+
+.animate-class.animate {
+  opacity: 0;
+  transform: translateY(0);
+}
 
 .image-container img {
   width: 200px;
@@ -8,6 +18,7 @@
   width: 20rem;
   display: flex;
   justify-content: center;
+  
 }
 
 .text-container {
@@ -15,6 +26,7 @@
     display: flex;
     gap: 25px;
     flex-direction: column;
+    
 
 }
 h1 {
@@ -29,4 +41,78 @@ h3{
   font-size:24px;
   font-weight: bold;
   color:#132450 !important;
+}
+
+@media (max-width: 1024px) {
+  .text-container{
+    width: 60%;
+  }
+  .text-container h1{
+    font-size: 26px;
+  }
+  .text-container p{
+    font-size: 14px;
+  }
+  .body-container.animate-class{
+    display: flex;
+    gap: 7rem;
+  }
+  .body-containers.animate-class{
+    display: flex;
+    gap: 7rem;
+  }
+  .body-container-three{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5rem;
+    justify-content: center;
+    width: 70%;
+    height: 30rem;
+    background-color: #132450 !important;
+    border-radius: 40px;
+  }
+    .body-container-three.animate-class{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 5rem ;
+        justify-content: center;
+        width: 70%;
+        height: 30rem;
+        background-color: #132450 !important;
+        border-radius: 40px;
+        
+}
+.image-container {
+  width: 12rem;
+  display: flex;
+  justify-content: center;
+}
+  .image-container img {
+    width: 150px;
+    object-fit: cover;
+    transform: rotate(8deg);
+  }
+
+  .body-container-two{
+    display: flex !important;
+    gap: 3rem !important;
+
+  }
+  .body-container{
+    display: flex !important;
+    gap: 1rem !important;
+    
+  }
+  .bodyContainer p{
+    font-size: 12px;
+  }
+
+  .bodyContainer h1{
+    font-size:20px;
+  }
+  .bodyContainer h3{
+    font-size:20px;
+  }
 }
