--- a/src/Components/CommentBody/styles.css
+++ b/src/Components/CommentBody/styles.css
@@ -24,3 +24,11 @@
     justify-content: center;
 
 }
+@media (min-width: 1024px){
+    .comment-body{
+        display: flex;
+        gap: 30px;
+        justify-content: center;
+        margin-top: 3rem;
+    }
+}
