--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,19 @@
   color: #61dafb;
 }
 
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 1024px) {
+  .App{
+    width: 100%;
   }
 }
