--- a/src/Components/Button/styles.css
+++ b/src/Components/Button/styles.css
@@ -1,7 +1,16 @@
-button{
-    width: 175px;
-    height: 52px;
-    border-radius: 20px;
+button {
+  width: 175px;
+  height: 52px;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 16px;
+}
+@media (max-width: 1024px) {
+  button {
+    width: 100px;
+    height: 39px;
+    border-radius: 13px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 12px;
+  }
 }
