--- a/src/Components/Investment/styles.css
+++ b/src/Components/Investment/styles.css
@@ -5,23 +5,12 @@
 
 }
 
-.body-container-three{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 30px;
-    justify-content: center;
-    width: 78%;
-    height: 595px;
-    background-color: #132450 !important;
-    border-radius: 40px;
-    
-}
+
 .body-container-three h1{
-    color: white;
+    color: white !important;
 }
 .body-container-three p{
-    color: white;
+    color: white !important;
     line-height: 30px;
 }
 .investment-text-container{
@@ -29,4 +18,19 @@
     display: flex;
     gap: 25px;
     flex-direction: column;
+}
+
+@media (min-width: 1024){
+    .body-container-three.animate-class{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 30px;
+        justify-content: center;
+        width: 60%;
+        height: 20rem;
+        background-color: #132450 !important;
+        border-radius: 40px;
+        
+    }
 }
