--- a/src/Components/TopBar/styles.css
+++ b/src/Components/TopBar/styles.css
@@ -1,8 +1,12 @@
-li{
+a{
     text-decoration: none;
     list-style: none;
     color: white;
 
+}
+li{
+    list-style: none;
+    color: white;
 }
 ul{
 display: flex;
@@ -13,11 +17,20 @@ display: flex;
 }
 .topbar{
     display: flex;
-    
+    padding-top: 1rem;
     align-items: center;
     justify-content: center;
+    padding-left: 2rem;
+    gap:1rem
 }
-
+.topbar img{
+    width: 35px;
+}
+.topbar p{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
+    color: white;
+}
 nav{
     flex: 1;
     display: flex;
