--- a/src/Components/Articles/styles.css
+++ b/src/Components/Articles/styles.css
@@ -1,35 +1,39 @@
-.article-modal-container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color: #132450;
-    gap: 4rem;
-    margin-top: 4rem;
-    padding-top: 4rem;
-    padding-bottom: 7rem;
+.article-modal-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #132450;
+  gap: 4rem;
+  margin-top: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 7rem;
 }
-.modal-container{
-    display: flex;
-    flex-direction: row;
-    gap: 6rem;
-    justify-content: center;
+.modal-container {
+  display: flex;
+  flex-direction: row;
+  gap: 6rem;
+  justify-content: center;
 }
-.article-title{
-    text-align: center;
-    font-size: 24px;
-    color: white;
+.article-title {
+  text-align: center;
+  font-size: 24px;
+  color: white;
 }
 
-@media (min-width: 1024px) {
-    .modal-container{
-    
-        gap: 2rem;
-    }
-    .article-title{
-        font-size: 20px;
-    }
-    .article-modal-container{
-        gap: 2rem;
-        padding-bottom: 5rem;
-    }
+@media (max-width: 1024px) {
+  .modal-container {
+    gap: 1rem;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    PADDING: 3REM;
+    justify-items: center;
+  }
+  .article-title {
+    font-size: 20px;
+  }
+  .article-modal-container {
+    gap: 2rem;
+    padding-bottom: 5rem;
+  }
 }
