--- a/src/Components/Body/styles.css
+++ b/src/Components/Body/styles.css
@@ -72,7 +72,7 @@
     cursor: pointer;
   }
 
-  @media (min-width: 1024px){
+  @media (max-width: 1024px){
     .buttonStyle{
       background-color: #132450;
       color: white;
