--- a/src/Components/BodyContainer/styles.css
+++ b/src/Components/BodyContainer/styles.css
@@ -29,6 +29,18 @@
     
 
 }
+
+.body-container-three{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5rem;
+  justify-content: center;
+  width: 85%;
+  height: 30rem;
+  background-color: #132450 !important;
+  border-radius: 40px;
+}
 h1 {
   font-size: 40px;
 }
@@ -65,9 +77,9 @@ h3{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 5rem;
+    gap: 1rem;
     justify-content: center;
-    width: 70%;
+    width: 85%;
     height: 30rem;
     background-color: #132450 !important;
     border-radius: 40px;
@@ -76,9 +88,9 @@ h3{
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 5rem ;
+        gap: 1rem ;
         justify-content: center;
-        width: 70%;
+        width: 85%;
         height: 30rem;
         background-color: #132450 !important;
         border-radius: 40px;
