--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -45,7 +45,7 @@
 
 .svg-content {
   position: absolute;
-  top: 247rem;
+  top: 237rem;
   left: -22rem;
   width: 38rem;
   height: 28rem;
@@ -77,7 +77,7 @@
     background-color: white;
     display: flex;
     padding: 4rem 3rem 4rem 3rem;
-    gap: 2rem;
+    gap: 4rem;
   }
   .lists-container h2 {
     font-size: 20px;
@@ -85,12 +85,20 @@
   .lists li {
     font-size: 14px;
     font-weight: 500;
-    
   }
-  .lists ul{
+  .lists-container {
+    gap: 2rem;
+    justify-content: center;
+
+    display: grid;
+    justify-items: start;
+
+    grid-template-columns: 1fr 1fr;
+  }
+  .lists ul {
     gap: 1rem;
   }
-  .lists{
+  .lists {
     gap: 1rem;
   }
   .social-media-container {
@@ -100,7 +108,7 @@
     font-size: 14px;
     font-weight: 500;
   }
-  .logo-Nexus p{
+  .logo-Nexus p {
     font-size: 20px;
   }
 }
