--- a/src/Components/Investment/styles.css
+++ b/src/Components/Investment/styles.css
@@ -20,7 +20,7 @@
     flex-direction: column;
 }
 
-@media (min-width: 1024){
+@media (max-width: 1024){
     .body-container-three.animate-class{
         display: flex;
         flex-direction: row;
