--- a/src/Components/TopBar/styles.css
+++ b/src/Components/TopBar/styles.css
@@ -38,3 +38,17 @@ nav{
     align-items: center;
     
 }
+
+@media (max-width: 1024px){
+    ul{
+        
+        gap: 1rem;
+        margin-right: 0rem;
+    }
+    .topbar p{
+        font-size: 20px;
+    }
+    .topbar li{
+        font-size: 14px;
+    }
+}
