--- a/src/Components/Investment/styles.css
+++ b/src/Components/Investment/styles.css
@@ -7,10 +7,10 @@
 
 
 .body-container-three h1{
-    color: white !important;
+    color: white ;
 }
 .body-container-three p{
-    color: white !important;
+    color: white ;
     line-height: 30px;
 }
 .investment-text-container{
@@ -32,5 +32,11 @@
         background-color: #132450 !important;
         border-radius: 40px;
         
+    }
+}
+
+@media (max-width:520px){
+    .investment-container {
+        margin-top: 6rem;
     }
 }
