--- a/src/Components/BodyContainer/styles.css
+++ b/src/Components/BodyContainer/styles.css
@@ -74,26 +74,21 @@ h3{
     gap: 7rem;
   }
   .body-container-three{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    
     gap: 1rem;
-    justify-content: center;
+   
     width: 85%;
-    height: 30rem;
+    height: 35rem;
     background-color: #132450 !important;
-    border-radius: 40px;
+    
   }
     .body-container-three.animate-class{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+      
         gap: 1rem ;
-        justify-content: center;
         width: 85%;
         height: 30rem;
         background-color: #132450 !important;
-        border-radius: 40px;
+        
         
 }
 .image-container {
@@ -127,4 +122,63 @@ h3{
   .bodyContainer h3{
     font-size:20px;
   }
+}
+
+@media (max-width: 520px) {
+  .animate-class {
+    opacity: 1;
+    transform: translateY(0);
+    
+  }
+  
+  .animate-class.animate {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .image-container{
+    display: none;
+  }
+  .text-container{
+    width: 75% !important;
+  }
+  .text-container h1{
+    color: #132450;
+  }
+  .text-container p{
+    color: #132450;
+  }
+  .button-container{
+    display: flex;
+    justify-content: center;
+  }
+  
+  .body-container-three{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+    justify-content: center;
+    width: 85%;
+    height: 35rem;
+    background-color: #D7F2FF !important;
+    border-radius: 40px;
+  }
+    .body-container-three.animate-class{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 1rem ;
+        justify-content: center;
+        width: 85%;
+        height: 35rem;
+        background-color: #D7F2FF !important;
+        border-radius: 40px;
+        
+}
+.body-container-three h1 {
+  color: #132450 !important;
+}
+.body-container-three p {
+  color:  #132450 !important;
+}
 }
