--- a/src/Components/TopBar/styles.css
+++ b/src/Components/TopBar/styles.css
@@ -39,6 +39,10 @@ nav{
     
 }
 
+nav svg{
+    display: none;
+}
+
 @media (max-width: 1024px){
     ul{
         
@@ -50,5 +54,22 @@ nav{
     }
     .topbar li{
         font-size: 14px;
+    }
+}
+
+@media (max-width: 520px){
+    .topbar p {
+        font-size: 12px;
+        color: #132450;
+    }
+    .topbar li {
+        display: none;
+    }
+    nav button{
+        display: none;
+    }
+    nav svg{
+        display: block !important;
+        width: 3rem;
     }
 }
