--- a/src/Components/Button/styles.css
+++ b/src/Components/Button/styles.css
@@ -4,6 +4,7 @@ button {
   border-radius: 20px;
   font-weight: bold;
   font-size: 16px;
+  border: none;
 }
 @media (max-width: 1024px) {
   button {
