--- a/src/Components/TopBar/styles.css
+++ b/src/Components/TopBar/styles.css
@@ -4,6 +4,10 @@ a{
     color: white;
 
 }
+.topbar ul li {
+    margin-right: 1rem;
+    cursor: pointer;
+  }
 li{
     list-style: none;
     color: white;
@@ -42,6 +46,45 @@ nav{
 nav svg{
     display: none;
 }
+.mobile-svg {
+    display: none;
+}
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  
+  .modal {
+    background-color: white;
+    padding: 2rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    width: 100vh;
+    height: 100vh;
+    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Enable scrolling if content exceeds modal height */
+  }
+  
+  .modal ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .modal ul li {
+    margin-bottom: 1rem;
+    cursor: pointer;
+  }
 
 @media (max-width: 1024px){
     ul{
@@ -61,6 +104,10 @@ nav svg{
 }
 
 @media (max-width: 520px){
+    a{
+        color: #132450;
+
+    }
     .topbar p {
         font-size: 12px;
         color: #132450;
@@ -68,6 +115,10 @@ nav svg{
     .topbar li {
         display: none;
     }
+    .mobile-svg {
+        display: block; /* Show SVG only on mobile screens */
+        cursor: pointer;
+      }
     nav button{
         display: none;
     }
@@ -78,4 +129,27 @@ nav svg{
     .topbar{
         padding-right: 2rem;
     }
+    .modal ul li{
+        
+        color: #132450;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+        font-weight: 500;
+        
+    }
+    .modal ul{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
+
+.close-svg {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    cursor: pointer;
+    width: 3rem;
+  }
