--- a/src/Components/LogoSliders/styles.css
+++ b/src/Components/LogoSliders/styles.css
@@ -58,3 +58,8 @@
     height: 50px;
     margin: 0 40px;
   }
+  @media (max-width: 520px) {
+    .logos-slide img {
+      height: 35px;
+    }
+  }
